gcc 	PR c++/32256, PR c++/32368: 	* function.c (saved_in_system_header): New global. 	(push_cfun): Save in_system_header. 	(pop_cfun): Restore in_system_header. 	(push_struct_function): Save in_system_header. gcc/testsuite 	PR c++/32368: 	* g++.dg/warn/pragma-system_header3.h: New. 	* g++.dg/warn/pragma-system_header3.C: New.

PR c++/32256:
	* g++.dg/warn/pragma-system_header4.C: New.
	* g++.dg/warn/pragma-system_header4.h: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@129936 138bc75d-0d04-0410-961f-82ee72b054a4