gcc/testsuite/g++.dg/warn/pragma-system_header4.C
@@ -1,0 +1,6 @@
+// PR c++/32256
+// { dg-options "-Wall" }
+
+#include "pragma-system_header4.h"
+
+void ok() { }
